fix(core): 🐛 avoid double spacing between notice and content

--- a/resources/skins.citizen.styles/layout.less
+++ b/resources/skins.citizen.styles/layout.less
@@ -6,7 +6,8 @@
 .citizen-body-container {
 	display: grid;
 	justify-content: center;
-	padding: var( --space-xl ) var( --padding-page );
+	margin: var( --space-xl ) 0; // don't collide with other components (e.g. notice)
+	padding: 0 var( --padding-page );
 	gap: var( --space-md ) var( --space-xl );
 	grid-template-areas: 'header'
 		'content'
